Added 6 characters to the creator

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -37,7 +37,57 @@
         </thead>
         <tbody>
           <tr>
-            <td>D</td>
+            <td><input type="checkbox"></td>
+            <td>Patrick Stewart</td>
+            <td>Breton</td>
+            <td>Male</td>
+            <td>Light</td>
+            <td>1000</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td><input type="checkbox"></td>
+            <td>Patrick Stewart</td>
+            <td>Breton</td>
+            <td>Male</td>
+            <td>Light</td>
+            <td>1000</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td><input type="checkbox"></td>
+            <td>Patrick Stewart</td>
+            <td>Breton</td>
+            <td>Male</td>
+            <td>Light</td>
+            <td>1000</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td><input type="checkbox"></td>
+            <td>Patrick Stewart</td>
+            <td>Breton</td>
+            <td>Male</td>
+            <td>Light</td>
+            <td>1000</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td><input type="checkbox"></td>
+            <td>Patrick Stewart</td>
+            <td>Breton</td>
+            <td>Male</td>
+            <td>Light</td>
+            <td>1000</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td><input type="checkbox"></td>
             <td>Patrick Stewart</td>
             <td>Breton</td>
             <td>Male</td>
