--- a/rpg/index.html
+++ b/rpg/index.html
@@ -33,10 +33,11 @@
             <th>Weight</th>
           </tr>
         </thead>
+        <div class="checkbox">
         <tbody>
           <div class="span4 collapse-group">
           <tr>
-            <td><input type="checkbox"></td>
+            <td><input type="checkbox" value="0"></td>
             <td><a href="#">Patrick Stewart</a></td>
             <td>Breton</td>
             <td>Male</td>
@@ -47,7 +48,7 @@
         </tbody>
         <tbody>
           <tr>
-            <td><input type="checkbox"></td>
+            <td><input type="checkbox" value"1"></td>
             <td><a href="#">Quark</a></td>
             <td>Khajiit</td>
             <td>Female</td>
@@ -57,7 +58,7 @@
         </tbody>
         <tbody>
           <tr>
-            <td><input type="checkbox"></td>
+            <td><input type="checkbox" value="2"></td>
             <td><a href="#">Jaden Korr</a></td>
             <td>Redguard</td>
             <td>Female</td>
@@ -67,7 +68,7 @@
         </tbody>
         <tbody>
           <tr>
-            <td><input type="checkbox"></td>
+            <td><input type="checkbox" value="3"></td>
             <td><a href="#">Qui-Gon Jinn</a></td>
             <td>Argonian</td>
             <td>Male</td>
@@ -77,7 +78,7 @@
         </tbody>
         <tbody>
           <tr>
-            <td><input type="checkbox"></td>
+            <td><input type="checkbox" value="4"></td>
             <td><a href="#">Ted Cruz</a></td>
             <td>Imperial</td>
             <td>Female</td>
@@ -87,13 +88,14 @@
         </tbody>
         <tbody>
           <tr>
-            <td><input type="checkbox"></td>
+            <td><input type="checkbox" value="5"></td>
             <td><a href="#">Scorpion</a></td>
             <td>Dunmer</td>
             <td>Male</td>
             <td>Light</td>
             <td>250</td>
           </tr>
+        </div>
         </tbody>
       </table>
         <div class="btn-group btn-group-justified">
