--- a/rpg/index.html
+++ b/rpg/index.html
@@ -134,9 +134,9 @@
         </div>
         <div class="modal-body">
           <label for="Name">Name</label>
-          <input type="Name" class="form-control" id="name" placeholder="Enter name of Dragonborn">
+          <input type="Name" class="form-control name" id="name" placeholder="Enter name of Dragonborn">
           <label for="Race">Race</label>
-          <select class="form-control">
+          <select class="form-control race">
             <option>Select a Race</option>
             <option>Nord</option>
             <option>Imperial</option>
@@ -150,19 +150,19 @@
             <option>Orsimer</option>
           </select>
           <label for="Gender">Gender</label>
-          <select class="form-control">
+          <select class="form-control gender">
             <option>Select a Gender</option>
             <option>Male</option>
             <option>Female</option>
           </select>
           <label for="Skin-Tone">Skin Tone</label>
-          <select class="form-control">
+          <select class="form-control skinTone">
             <option>Select a Skin Tone</option>
             <option>Light</option>
             <option>Dark</option>
           </select>
           <label for="Weight">Weight</label>
-          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control weight" placeholder="Text input">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
