Added attack skills

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -41,18 +41,59 @@
           <table class="table table-striped">
             <thead>
               <tr>
-                <th>Attribute</th>
+                <th>Skill</th>
                 <th>Value</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>Strength</td>
-                <td>18</td>
+              <!-- Using "danger" for red, signifying attack skills. -->
+              <tr class="danger">
+                <td>Archery</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
               </tr>
-              <tr>
-                <td>Dexterity</td>
-                <td>5</td>
+              <tr class="danger">
+                <td>Heavy Armor</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="danger">
+                <td>Block</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="danger">
+                <td>Two-Handed</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="danger">
+                <td>One-Handed</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="danger">
+                <td>Smithing</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
               </tr>
             </tbody>
           </table>
