adding skills by color

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -38,7 +38,7 @@
           </h2>
 
 
-          <table class="table table-striped">
+          <table class="table">
             <thead>
               <tr>
                 <th>Skill</th>
@@ -47,7 +47,7 @@
             </thead>
             <tbody>
               <!-- Using "danger" for red, signifying attack skills. -->
-              <tr class="danger">
+              <tr class="red">
                 <td>Archery</td>
                 <td>
                   <script>
@@ -55,7 +55,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="danger">
+              <tr class="red">
                 <td>Heavy Armor</td>
                 <td>
                   <script>
@@ -63,7 +63,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="danger">
+              <tr class="red">
                 <td>Block</td>
                 <td>
                   <script>
@@ -71,7 +71,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="danger">
+              <tr class="red">
                 <td>Two-Handed</td>
                 <td>
                   <script>
@@ -79,7 +79,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="danger">
+              <tr class="red">
                 <td>One-Handed</td>
                 <td>
                   <script>
@@ -87,8 +87,56 @@
                   </script>
                 </td>
               </tr>
-              <tr class="danger">
+              <tr class="red">
                 <td>Smithing</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="green-skill">
+                <td>Light Armor</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="green-skill">
+                <td>Sneak</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="green-skill">
+                <td>Lockpicking</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="green-skill">
+                <td>Pickpocket</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="green-skill">
+                <td>Speech</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Alchemy</td>
                 <td>
                   <script>
                     document.write(Math.floor(Math.random()*100)+1);
