made skill table borderless and added routine for displaying initial inputted info

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -28,17 +28,14 @@
               </script>
             </strong>
           </h1>
-          <h2>
-            <em>
-              <p><script>document.write("Race: " + a[2]);</script></p>
-              <p><script>document.write("Gender: " + a[3]);</script></p>
-              <p><script>document.write("Skin Tone: " + a[4]);</script></p>
-              <p><script>document.write("Weight: " + a[5]);</script></p>
-            </em>
-          </h2>
+          <p><strong><script>document.write("Race: " + a[2]);</script>
+              &#8226; <script>document.write("Gender: " + a[3]);</script>
+              &#8226; <script>document.write("Skin Tone: " + a[4]);</script>
+              &#8226; <script>document.write("Weight: " + a[5] + "lbs");</script>
+          </p></strong>
 
 
-          <table class="table">
+          <table class="table table-borderless table-condensed table-hover">
             <thead>
               <tr>
                 <th>Skill</th>
@@ -95,7 +92,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="green-skill">
+              <tr class="green">
                 <td>Light Armor</td>
                 <td>
                   <script>
@@ -103,7 +100,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="green-skill">
+              <tr class="green">
                 <td>Sneak</td>
                 <td>
                   <script>
@@ -111,7 +108,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="green-skill">
+              <tr class="green">
                 <td>Lockpicking</td>
                 <td>
                   <script>
@@ -119,7 +116,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="green-skill">
+              <tr class="green">
                 <td>Pickpocket</td>
                 <td>
                   <script>
@@ -127,7 +124,7 @@
                   </script>
                 </td>
               </tr>
-              <tr class="green-skill">
+              <tr class="green">
                 <td>Speech</td>
                 <td>
                   <script>
@@ -135,8 +132,56 @@
                   </script>
                 </td>
               </tr>
-              <tr class="blue">
+              <tr class="green">
                 <td>Alchemy</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Illusion</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Conjuration</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Destruction</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Restoration</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Alteration</td>
+                <td>
+                  <script>
+                    document.write(Math.floor(Math.random()*100)+1);
+                  </script>
+                </td>
+              </tr>
+              <tr class="blue">
+                <td>Enchanting</td>
                 <td>
                   <script>
                     document.write(Math.floor(Math.random()*100)+1);
