--- a/rpg/index.html
+++ b/rpg/index.html
@@ -28,7 +28,7 @@
             </th>
             <th>Name</th>
             <th>Race</th>
-            <th>Sex</th>
+            <th>Gender</th>
             <th>Skin Tone</th>
             <th>Weight</th>
           </tr>
