--- a/rpg/index.html
+++ b/rpg/index.html
@@ -38,7 +38,7 @@
           <div class="span4 collapse-group">
           <tr>
             <td><input type="checkbox" value="0"></td>
-            <td><a href="#">Patrick Stewart</a></td>
+            <td><a href="character.html#Patrick Stewart#Breton#Male#Light#1000">Patrick Stewart</a></td>
             <td>Breton</td>
             <td>Male</td>
             <td>Light</td>
@@ -49,7 +49,7 @@
         <tbody>
           <tr>
             <td><input type="checkbox" value"1"></td>
-            <td><a href="#">Quark</a></td>
+            <td><a href="character.html#Quark#Khajiit#Female#Fur#100">Quark</a></td>
             <td>Khajiit</td>
             <td>Female</td>
             <td>Fur</td>
@@ -59,7 +59,7 @@
         <tbody>
           <tr>
             <td><input type="checkbox" value="2"></td>
-            <td><a href="#">Jaden Korr</a></td>
+            <td><a href="character.html#Jaden Korr#Redguard#Female#Red#140">Jaden Korr</a></td>
             <td>Redguard</td>
             <td>Female</td>
             <td>Red</td>
@@ -69,7 +69,7 @@
         <tbody>
           <tr>
             <td><input type="checkbox" value="3"></td>
-            <td><a href="#">Qui-Gon Jinn</a></td>
+            <td><a href="character.html#Qui-Gon Jinn#Argonian#Male#Light#170">Qui-Gon Jinn</a></td>
             <td>Argonian</td>
             <td>Male</td>
             <td>Light</td>
@@ -79,7 +79,7 @@
         <tbody>
           <tr>
             <td><input type="checkbox" value="4"></td>
-            <td><a href="#">Ted Cruz</a></td>
+            <td><a href="character.html#Ted Cruz#Imperial#Female#Light#103">Ted Cruz</a></td>
             <td>Imperial</td>
             <td>Female</td>
             <td>Light</td>
@@ -89,7 +89,7 @@
         <tbody>
           <tr>
             <td><input type="checkbox" value="5"></td>
-            <td><a href="#">Scorpion</a></td>
+            <td><a href="character.html#Scorpion#Dunmer#Male#Light#250">Scorpion</a></td>
             <td>Dunmer</td>
             <td>Male</td>
             <td>Light</td>
