Moved Text w/ Glyphs outside of span

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -99,9 +99,9 @@
         </tbody>
       </table>
         <div class="btn-group btn-group-justified">
-            <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success btn-block"><span class="glyphicon glyphicon-pencil">Create</span></a>
-            <a class="btn btn-info btn-lg btn-block" href="character.html"><span class="glyphicon glyphicon-edit">Edit</span></a>
-            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block"><span class="glyphicon glyphicon-trash">Delete</span></a>
+            <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success btn-block"><span class="glyphicon glyphicon-pencil"></span>Create</a>
+            <a class="btn btn-info btn-lg btn-block" href="character.html"><span class="glyphicon glyphicon-edit"></span>Edit</a>
+            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block"><span class="glyphicon glyphicon-trash"></span>Delete</a>
           </div>
         </div>
       </div>
