--- a/rpg/character.html
+++ b/rpg/character.html
@@ -16,7 +16,11 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h1>
+          <style type="text/css">
+              .mover {margin-top:65px;}
+            </style>
+
+          <h1 class="mover">
             <em>
               <strong>
                 <script>
@@ -191,14 +195,15 @@
           </div>
           <div class="column-md-6">
             <style type="text/css">
-              .tablething {width:550px;}
+              .tablething {width:50%;}
+              .btn-group {display:inline-block!important;}
             </style>
             <div class="btn-group">
             <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span>Create Item</a>
             <a class="btn btn-info btn-lg" href="#"><span class="glyphicon glyphicon-edit"></span>Edit Item Attributes</a>
             <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete Item</a>
             </div>
-            <table class="tablething">
+            <table class="table tablething">
               <thead>
                 <h1><strong><em>Inventory</em></strong></h1>
                 <p><strong>A list of <script>document.write(a[1]+"'s ");</script>items.</strong></p>
@@ -208,9 +213,83 @@
                 <th>Value</th>
               </thead>
               <tbody>
+                <tr>  
+                  <td>Iron Sword</td>
+                  <td>
+                    <script>
+                      document.write(Math.floor(Math.random()*100)+1);
+                    </script>
+                  </td>
+                  <td>9</td>
+                  <td>25</td>
+                </tr>
+                <tr>  
+                  <td>Steel Sword</td>
+                  <td>
+                    <script>
+                      document.write(Math.floor(Math.random()*100)+1);
+                    </script>
+                  </td>
+                  <td>10</td>
+                  <td>45</td>
+                </tr>
+                <tr>  
+                  <td>Orcish Sword</td>
+                  <td>
+                    <script>
+                      document.write(Math.floor(Math.random()*100)+1);
+                    </script>
+                  </td>
+                  <td>11</td>
+                  <td>75</td>
+                </tr>
+                <tr>  
+                  <td>Dwarven Sword</td>
+                  <td>
+                    <script>
+                      document.write(Math.floor(Math.random()*100)+1);
+                    </script>
+                  </td>
+                  <td>12</td>
+                  <td>125</td>
+                </tr>
+                <tr>  
+                  <td>Nord Hero Sword</td>
+                  <td>
+                    <script>
+                      document.write(Math.floor(Math.random()*100)+1);
+                    </script>
+                  </td>
+                  <td>9</td>
+                  <td>135</td>
+                </tr>
               </tbody>
             </table>
           </div>
+
+    <!-- Modal -->
+  <div class="modal fade" id="createItemModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Create Item</h4>
+        </div>
+        <div class="modal-body">
+          <label for="Name">Name</label>
+          <input type="Name" class="form-control name" id="name" placeholder="Item">
+          <label for="Damage">Damage</label>
+          <input type="Damage" class="form-control name" id="damage" placeholder="Damage">
+          <label for="Weight">Weight</label>
+          <input type="Weight" class="form-control name" id="weight" placeholder="Weight"><label for="Damage">Damage</label>
+          <input type="Value" class="form-control name" id="value" placeholder="Value">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button id="confirm-create-button" type="button" class="btn btn-success">Create Item</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
