--- a/rpg/character.html
+++ b/rpg/character.html
@@ -200,20 +200,24 @@
             </style>
             <div class="btn-group">
             <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span>Create Item</a>
-            <a class="btn btn-info btn-lg" href="#"><span class="glyphicon glyphicon-edit"></span>Edit Item Attributes</a>
+            <a class="btn btn-info btn-lg" href="#editItemModal"><span class="glyphicon glyphicon-edit"></span>Edit Item Attributes</a>
             <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete Item</a>
             </div>
             <table class="table tablething">
               <thead>
                 <h1><strong><em>Inventory</em></strong></h1>
                 <p><strong>A list of <script>document.write(a[1]+"'s ");</script>items.</strong></p>
+                <th>
+                  <span class="glyphicon glyphicon-check"></span>
+                </th>
                 <th>Item Name</th>
                 <th>Damage</th>
                 <th>Weight</th>
                 <th>Value</th>
               </thead>
               <tbody>
-                <tr>  
+                <tr>
+                  <td><input type="checkbox" value="0"></td>  
                   <td>Iron Sword</td>
                   <td>
                     <script>
@@ -224,6 +228,7 @@
                   <td>25</td>
                 </tr>
                 <tr>  
+                  <td><input type="checkbox" value="1"></td>
                   <td>Steel Sword</td>
                   <td>
                     <script>
@@ -233,7 +238,8 @@
                   <td>10</td>
                   <td>45</td>
                 </tr>
-                <tr>  
+                <tr>
+                  <td><input type="checkbox" value="2"></td>  
                   <td>Orcish Sword</td>
                   <td>
                     <script>
@@ -243,7 +249,8 @@
                   <td>11</td>
                   <td>75</td>
                 </tr>
-                <tr>  
+                <tr>
+                  <td><input type="checkbox" value="3"></td>  
                   <td>Dwarven Sword</td>
                   <td>
                     <script>
@@ -253,7 +260,8 @@
                   <td>12</td>
                   <td>125</td>
                 </tr>
-                <tr>  
+                <tr> 
+                  <td><input type="checkbox" value="4"></td> 
                   <td>Nord Hero Sword</td>
                   <td>
                     <script>
@@ -268,7 +276,7 @@
           </div>
 
     <!-- Modal -->
-  <div class="modal fade" id="createItemModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+  <div class="modal fade" id="createItemModal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -286,6 +294,48 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
           <button id="confirm-create-button" type="button" class="btn btn-success">Create Item</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+      <!-- Modal -->
+  <div class="modal fade" id="editItemModal" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Edit Item</h4>
+        </div>
+        <div class="modal-body">
+          <label for="Name">Name</label>
+          <input type="Name" class="form-control name" id="name" placeholder="Edit Item Name">
+          <label for="Damage">Damage</label>
+          <input type="Damage" class="form-control name" id="damage" placeholder="Edit Damage">
+          <label for="Weight">Weight</label>
+          <input type="Weight" class="form-control name" id="weight" placeholder="Edit Weight"><label for="Damage">Damage</label>
+          <input type="Value" class="form-control name" id="value" placeholder="Edit Value">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel Edit</button>
+          <button id="confirm-create-button" type="button" class="btn btn-success">Confirm Edit</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+    <!-- Modal -->
+  <div class="modal fade" id="deleteItemModal" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Are you sure that you want to delete this item?</h4>
+        </div>
+        <div class="modal-body">
+          Deleting an item is permanent and <strong>cannot be undone</strong>.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
+          <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete Character</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
