--- a/rpg/character.html
+++ b/rpg/character.html
@@ -199,9 +199,9 @@
               .btn-group {display:inline-block!important;}
             </style>
             <div class="btn-group">
-            <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span>Create Item</a>
-            <a class="btn btn-info btn-lg" href="#editItemModal"><span class="glyphicon glyphicon-edit"></span>Edit Item Attributes</a>
-            <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete Item</a>
+            <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span> Create Item</a>
+            <a class="btn btn-info btn-lg" data-toggle="modal" href="#editItemModal"><span class="glyphicon glyphicon-edit"></span> Edit Item Attributes</a>
+            <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete Item</a>
             </div>
             <table class="table tablething">
               <thead>
@@ -293,7 +293,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button id="confirm-create-button" type="button" class="btn btn-success">Create Item</button>
+          <button id="confirm-create-item-button" type="button" class="btn btn-success">Create Item</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -317,7 +317,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel Edit</button>
-          <button id="confirm-create-button" type="button" class="btn btn-success">Confirm Edit</button>
+          <button id="confirm-edit-item-button" type="button" class="btn btn-success">Confirm Edit</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -335,7 +335,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
-          <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete Character</button>
+          <button id="confirm-delete-item-button" type="button" class="btn btn-danger">Delete Character</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -346,5 +346,8 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+    <!-- Code specific to our RPG user interface. -->
+    <script src="rpg.js"></script>
   </body>
 </html>
