Help modal text and instructions implemented

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -176,8 +176,11 @@
         <h4 class="modal-title"><span class="glyphicon glyphicon-info-sign"></span> Help</h4>
       </div>
       <div class="modal-body">
-        <p>Welcome to the Skyrim Character Creator. To create a new character, click the create character button. After entering in a name, race, gender, skin tone, and weight, you will be able to play around with the character's inventory.</p>
+        <p>Welcome to the Skyrim Character Creator. To <strong>create a new character</strong>, click the create character button. After entering in a <em>name, race, gender, skin tone, and weight,</em> you will be able to play around with the character's inventory.</p>
         <p>You are also allowed to have <strong>multiple characters</strong>. Create as many as you would like, and this site will keep track of their skill stats and items.</p>
+        <p>To <strong>edit a character</strong>, you may either select the checkbox and click "Edit Character" or click directly on the character's name. It will redirect you to their skills and inventory page, with more detailed information on your current Dragonborn hero.</p>
+        <p>If one of your characters are growing old (Perhaps like "An arrow to the knee") and you are losing interest in him/her, it may be time to part ways with your once-beloved hero. To <strong>delete a character</strong>, check the checkbox next to their name and click <em>delete</em>. Don't worry, either; <em><strong>we will make sure your character can be deleted only after a confirmation page!</strong></em></p>
+        <p>I hope you enjoy the character creation suite! Fus ro Dah!</p>
       </div>
       <div class="modal-footer">
         <button id="close-help-button" type="button" class="btn btn-primary">Thanks!</button>
