--- a/rpg/character.html
+++ b/rpg/character.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="http://images4.wikia.nocookie.net/__cb62351/elderscrolls/images/6/64/Favicon.ico"/>
 
     <!-- My CSS -->
     <link rel="stylesheet" href="rpg.css">
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <a href="index.html">Back to Main Menu</a>
-      </div>
-      <div class="row">
+      <div class="row topOfPage">
         <div class="col-md-6">
           <style type="text/css">
-              .mover {margin-top:65px;}
+              .btn-left {
+                margin-right: 102px;
+              }
             </style>
-
-          <h1 class="mover">
+            <a id="back-to-main-menu" href="index.html" class="btn btn-lg btn-left"><span class="glyphicon glyphicon-circle-arrow-left"></span> Back to Main Menu</a>
+            <a class="btn btn-lg" data-toggle="modal" href="#inventoryHelpModal"><span class="glyphicon glyphicon-edit"></span> <strong>Skills/Inventory Help</strong></a>
+          <h1>
             <em>
               <strong>
                 <script>
@@ -196,7 +197,6 @@
           <div class="column-md-6">
             <style type="text/css">
               .tablething {width:50%;}
-              .btn-group {display:inline-block!important;}
             </style>
             <div class="btn-group">
             <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span> Create Item</a>
@@ -274,8 +274,14 @@
               </tbody>
             </table>
           </div>
+        </div>
+        <footer>
+          <p class="pull-right"><a href="#">Back to top</a></p>
+          <p>&copy; 2013, Edward Bramanti. All trademarks belong to their respective owners (in this case, Bethesda Softworks).</p>
+        </footer>
+      </div>
 
-    <!-- Modal -->
+    <!-- Create Item Modal -->
   <div class="modal fade" id="createItemModal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -288,18 +294,18 @@
           <label for="Damage">Damage</label>
           <input type="Damage" class="form-control name" id="damage" placeholder="Damage">
           <label for="Weight">Weight</label>
-          <input type="Weight" class="form-control name" id="weight" placeholder="Weight"><label for="Damage">Damage</label>
+          <input type="Weight" class="form-control name" id="weight" placeholder="Weight"><label for="Value">Value</label>
           <input type="Value" class="form-control name" id="value" placeholder="Value">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-default btn-danger" data-dismiss="modal">Cancel</button>
           <button id="confirm-create-item-button" type="button" class="btn btn-success">Create Item</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-      <!-- Modal -->
+<!-- Edit Item Modal -->
   <div class="modal fade" id="editItemModal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -316,14 +322,14 @@
           <input type="Value" class="form-control name" id="value" placeholder="Edit Value">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel Edit</button>
+          <button type="button" class="btn btn-default btn-danger" data-dismiss="modal">Cancel Edit</button>
           <button id="confirm-edit-item-button" type="button" class="btn btn-success">Confirm Edit</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-    <!-- Modal -->
+<!-- Delete Item Modal -->
   <div class="modal fade" id="deleteItemModal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -337,9 +343,29 @@
           <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
           <button id="confirm-delete-item-button" type="button" class="btn btn-danger">Delete Character</button>
         </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="inventoryHelpModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title"><span class="glyphicon glyphicon-info-sign"></span> Inventory and Skills Help</h4>
+        </div>
+        <div class="modal-body">
+          <p>Welcome to the Creator's Inventory and Skills page. To <strong>add a new item to the inventory</strong>, click the create item button. After entering in a <em>item name, damage, weight, and value,</em> the item will appear in your current character's inventory.</p>
+          <p>To <strong>edit an item</strong>, select the checkbox and click "Edit Item." This will allow you to change any aspect of the item in case you made a mistake!</p>
+          <p>Tired of having 10 Iron Swords? To <strong>delete an item</strong>, check the box next to their name and click <em>delete</em>. Don't worry, either; <em><strong>we will make sure your item can be deleted only after a confirmation page!</strong></em></p>
+          <p>I hope you enjoy the item and skills creation suite! (And please avoid committing crimes against Skyrim and her people!)</p>
+        </div>
+        <div class="modal-footer">
+          <button id="close-inventory-help-button" type="button" class="btn btn-primary">Thanks!</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
@@ -347,7 +373,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-    <!-- Code specific to our RPG user interface. -->
+    <!-- Code specific to my RPG user interface. -->
     <script src="rpg.js"></script>
   </body>
 </html>
