Cleaning up a few spelling errors

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -20,7 +20,7 @@
               }
             </style>
             <a id="back-to-main-menu" href="index.html" class="btn btn-lg btn-left"><span class="glyphicon glyphicon-circle-arrow-left"></span> Back to Main Menu</a>
-            <a class="btn btn-lg" data-toggle="modal" href="#inventoryHelpModal"><span class="glyphicon glyphicon-edit"></span> <strong>Skills/Inventory Help</strong></a>
+            <a class="btn btn-lg" data-toggle="modal" href="#inventoryHelpModal"><span class="glyphicon glyphicon-info-sign"></span> <strong>Skills/Inventory Help</strong></a>
           <h1>
             <em>
               <strong>
@@ -341,7 +341,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
-          <button id="confirm-delete-item-button" type="button" class="btn btn-danger">Delete Character</button>
+          <button id="confirm-delete-item-button" type="button" class="btn btn-danger">Delete Item</button>
         </div>
       </div>
     </div>
