added lbs to character weights

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -42,7 +42,7 @@
             <td>Breton</td>
             <td>Male</td>
             <td>Light</td>
-            <td>1000</td>
+            <td>1000lbs</td>
           </tr>
           <tr>
             <td><input type="checkbox" value"1"></td>
@@ -50,7 +50,7 @@
             <td>Khajiit</td>
             <td>Female</td>
             <td>Fur</td>
-            <td>100</td>
+            <td>100lbs</td>
           </tr>
           <tr>
             <td><input type="checkbox" value="2"></td>
@@ -58,7 +58,7 @@
             <td>Redguard</td>
             <td>Female</td>
             <td>Red</td>
-            <td>140</td>
+            <td>140lbs</td>
           </tr>
           <tr>
             <td><input type="checkbox" value="3"></td>
@@ -66,7 +66,7 @@
             <td>Argonian</td>
             <td>Male</td>
             <td>Light</td>
-            <td>170</td>
+            <td>170lbs</td>
           </tr>
           <tr>
             <td><input type="checkbox" value="4"></td>
@@ -74,7 +74,7 @@
             <td>Imperial</td>
             <td>Female</td>
             <td>Light</td>
-            <td>103</td>
+            <td>103lbs</td>
           </tr>
           <tr>
             <td><input type="checkbox" value="5"></td>
@@ -82,7 +82,7 @@
             <td>Dunmer</td>
             <td>Male</td>
             <td>Light</td>
-            <td>250</td>
+            <td>250lbs</td>
           </tr>
         </tbody>
       </table>
