Quick changes to clean up class names in character page

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -196,14 +196,14 @@
           </div>
           <div class="column-md-6">
             <style type="text/css">
-              .tablething {width:50%;}
+              .inventoryTable {width:50%;}
             </style>
             <div class="btn-group">
-            <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span> Create Item</a>
-            <a class="btn btn-info btn-lg" data-toggle="modal" href="#editItemModal"><span class="glyphicon glyphicon-edit"></span> Edit Item Attributes</a>
-            <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete Item</a>
+              <a id="create-button" data-toggle="modal" href="#createItemModal" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-pencil"></span> Create Item</a>
+              <a class="btn btn-info btn-lg" data-toggle="modal" href="#editItemModal"><span class="glyphicon glyphicon-edit"></span> Edit Item Attributes</a>
+              <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete Item</a>
             </div>
-            <table class="table tablething">
+            <table class="table inventoryTable">
               <thead>
                 <h1><strong><em>Inventory</em></strong></h1>
                 <p><strong>A list of <script>document.write(a[1]+"'s ");</script>items.</strong></p>
