Initial demo of Ajax.

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -374,6 +374,6 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
     <!-- Code specific to my RPG user interface. -->
-    <script src="rpg.js"></script>
+    <script src="character.js"></script>
   </body>
 </html>
