--- a/rpg/index.html
+++ b/rpg/index.html
@@ -22,20 +22,21 @@
             <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block"><span class="glyphicon glyphicon-trash"></span> Delete Character</a>
           </div>
       </div>
-      <table class="table table-striped">
+      <table id="character-table" class="table table-striped">
         <thead>
           <tr>  
             <th>
               <span class="glyphicon glyphicon-check"></span>
             </th>
             <th>Name</th>
-            <th>Race</th>
+            <th>Class</th>
             <th>Gender</th>
-            <th>Skin Tone</th>
-            <th>Weight</th>
+            <th>Level</th>
+            <th>Money</th>
           </tr>
         </thead>
         <tbody>
+        <!--
           <tr>
             <td><input type="checkbox" value="0"></td>
             <td><a href="character.html#Patrick Stewart#Breton#Male#Light#1000">Patrick Stewart</a></td>
@@ -84,6 +85,7 @@
             <td>Light</td>
             <td>250lbs</td>
           </tr>
+          -->
         </tbody>
       </table>
       <footer>
