--- a/rpg/index.html
+++ b/rpg/index.html
@@ -121,10 +121,10 @@
         </div>
         <div class="modal-body">
           <label for="Name">Name</label>
-          <input type="Name" class="form-control name" id="name" placeholder="Enter name of Dragonborn">
-          <label for="Race">Race</label>
-          <select class="form-control race">
-            <option>Select a Race</option>
+          <input type="Name" class="form-control" id="name" placeholder="Enter name of Dragonborn">
+          <label for="Class">Class</label>
+          <select class="form-control" id="classType">
+            <option>Select a Class Type</option>
             <option>Nord</option>
             <option>Imperial</option>
             <option>Redguard</option>
@@ -137,19 +137,15 @@
             <option>Orsimer</option>
           </select>
           <label for="Gender">Gender</label>
-          <select class="form-control gender">
+          <select class="form-control" id="gender">
             <option>Select a Gender</option>
             <option>Male</option>
             <option>Female</option>
           </select>
-          <label for="Skin-Tone">Skin Tone</label>
-          <select class="form-control skinTone">
-            <option>Select a Skin Tone</option>
-            <option>Light</option>
-            <option>Dark</option>
-          </select>
-          <label for="Weight">Weight</label>
-          <input type="text" class="form-control weight" placeholder="Text input">
+          <label for="Level">Level</label>
+          <input type="Level" class="form-control" id="level" placeholder="Enter Level of Dragonborn">
+          <label for="Money">Money</label>
+          <input type="text" class="form-control" id="money" placeholder="Enter Amount of Money">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default btn-danger" data-dismiss="modal">Cancel</button>
