Added a spawn random character button

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -148,7 +148,7 @@
           <input type="text" class="form-control" id="money" placeholder="Enter Amount of Money">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-warning" data-dismiss="modal" id="CharacterSpawner">Spawn Random Character</button>
+          <button id="confirm-random-create-button"type="button" class="btn btn-warning" data-dismiss="modal" id="CharacterSpawner">Spawn Random Character</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
           <button id="confirm-create-button" type="button" class="btn btn-success">Create Character</button>
         </div>
